--- a/ecommerce-website/package.json
+++ b/ecommerce-website/package.json
@@ -12,13 +12,17 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@egoist/tailwindcss-icons": "^1.8.1",
+    "animate.css": "^4.1.1",
     "firebase": "^10.13.1",
+    "flowbite": "^2.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
     "vue-i18n": "^10.0.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.1",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
@@ -27,6 +31,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/tsconfig": "^0.5.1",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
     "npm-run-all2": "^6.2.0",
