--- a/ecommerce-website/package.json
+++ b/ecommerce-website/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
+    "@mdi/font": "^7.4.47",
     "animate.css": "^4.1.1",
     "firebase": "^10.13.1",
     "flowbite": "^2.5.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-awesome-paginate": "^1.2.0",
     "vue-i18n": "^10.0.1",
     "vue-router": "^4.3.3"
   },
@@ -39,6 +41,8 @@
     "tailwindcss": "^3.4.11",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
-    "vue-tsc": "^2.0.21"
+    "vite-plugin-vuetify": "^2.0.4",
+    "vue-tsc": "^2.0.21",
+    "vuetify": "^3.7.2"
   }
 }
