--- a/ecommerce-website/package.json
+++ b/ecommerce-website/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@egoist/tailwindcss-icons": "^1.8.1",
+    "@lbgm/phone-input": "^1.0.2-alpha",
+    "@lbgm/phone-number-input": "^1.1.6",
     "@mdi/font": "^7.4.47",
     "animate.css": "^4.1.1",
     "firebase": "^10.13.1",
@@ -21,6 +23,7 @@
     "vue": "^3.4.29",
     "vue-awesome-paginate": "^1.2.0",
     "vue-i18n": "^10.0.1",
+    "vue-phone-number-input": "^1.12.13",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
